--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,11 @@
-{}
+{
+	"tabWidth": 2,
+	"useTabs": false,
+	"printWidth": 120,
+	"proseWrap": "never",
+	"singleQuote": false,
+	"trailingComma": "none",
+	"semi": true,
+	"arrowParens": "avoid",
+	"bracketSpacing": true
+}
