--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "less": "^4.1.3",
     "pinia": "^2.0.26",
     "vue": "^3.2.45",
