--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "element-plus": "^2.2.27",
     "less": "^4.1.3",
     "pinia": "^2.0.26",
     "pinia-plugin-persistedstate": "^3.0.2",
