--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.7",
+    "@heroicons/vue": "^2.0.13",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "axios": "^1.2.1",
     "element-plus": "^2.2.27",
     "less": "^4.1.3",
