--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.1",
     "element-plus": "^2.2.27",
     "less": "^4.1.3",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.26",
     "pinia-plugin-persistedstate": "^3.0.2",
     "vue": "^3.2.45",
